--- a/templates/plex_mate_scan_setting.html
+++ b/templates/plex_mate_scan_setting.html
@@ -17,11 +17,22 @@
       {{ macros.setting_input_int('scan_max_scan_count', '최대 실행 프로세스 수', min=1, max=20, value=arg['scan_max_scan_count']) }}
       {{ macros.setting_input_int('scan_max_wait_time', '파일체크 대기 시간', value=arg['scan_max_wait_time'], desc=['파일(폴더) 대기 시간. 분단위', '추가 모드 : 파일이 나타날 때까지 대기 시작.', '삭제 모드 : 파일이 없어질 때까지 대기 시간']) }}
       {{ macros.setting_input_int('scan_filecheck_thread_interval', '파일체크 주기', value=arg['scan_filecheck_thread_interval'], desc=['단위 : 초']) }}
+      {{ macros.m_hr() }}
+
+      {{ macros.setting_checkbox('scan_use_vfs_refresh', 'rclone vfs/refresh 사용', value=arg['scan_use_vfs_refresh'], desc=['rclone 플러그인 설치 필요']) }}
+      <div id="scan_use_vfs_refresh_div" class="collapse">
+      {{ macros.setting_input_textarea('scan_vfs_change_rule', 'vfs/refresh 규칙', col='12', row='3', value=arg['scan_vfs_change_rule'], desc=['A|B|C 가 하나의 규칙. 규칙 구분자 엔터']) }}
+      {{ macros.info_text('', '', "A: 로컬 경로, B: 리모트 경로, C: rc addr") }}
+      {{ macros.info_text('', '', "스캔경로가 A로 시작하면 A값을 B값으로 바꾼 리모트 경로를 rcaddr에 해당하는 C에 전달") }}
+      {{ macros.info_text('', '', "/mnt/gds2/GDRIVE|/GDRIVE|172.17.0.1:5275") }}
+      
+      </div>
+
       <!--{{ macros.setting_radio_with_value('scan_mode', '스캔 방식', [['bin', '바이너리'], ['web', '웹']], value=arg['scan_mode'], desc=['바이너리 모드로 사용 하다 Plex가 지원하지 않는 경우 변경']) }}-->
 
       {{ macros.m_hr_head_bottom() }}
       {{ macros.info_text_big('', '<테스트>', '')}}
-      {{ macros.setting_input_textarea('scan_manual_target', '스캔 타겟 파일 또는 폴더',  value=arg['scan_manual_target']) }}
+      {{ macros.setting_input_textarea('scan_manual_target', '스캔 타겟 파일 또는 폴더',  col=12, value=arg['scan_manual_target']) }}
       {{ macros.setting_buttons([['add_btn', '추가'], ['remove_file_btn', '파일 삭제'], ['remove_folder_btn', '폴더 삭제'], ['refresh_btn', '메타새로고침 모드']]) }}
     {{ macros.m_tab_content_end() }} 
     
@@ -32,6 +43,14 @@
 </form>
 
 <script type="text/javascript">
+
+$(document).ready(function(){
+  use_collapse("scan_use_vfs_refresh");
+});
+
+
+$('#scan_use_vfs_refresh').change(function() {use_collapse('scan_use_vfs_refresh');});
+
 
 $("body").on('click', '#select_target_btn', function(e){
   e.preventDefault();
